[gd_scene load_steps=10 format=3 uid="uid://43mktudtc0m8"]

[ext_resource type="Script" path="res://src/level/map/rover_map/rover_map.gd" id="1_4ca5h"]
[ext_resource type="TileSet" uid="uid://q2i4ei2g7e57" path="res://src/level/map/rover_map/rover_map.tres" id="2_tup14"]
[ext_resource type="PackedScene" uid="uid://emgfe5q80kpf" path="res://src/level/entity/module/power_module/power_module.tscn" id="3_6y7py"]
[ext_resource type="PackedScene" uid="uid://bvs2v8eki8mhr" path="res://src/level/entity/module/engine_module/engine_module.tscn" id="4_8s7ka"]
[ext_resource type="PackedScene" uid="uid://dyw70d5dlp3bj" path="res://src/level/entity/rover_exit/rover_exit.tscn" id="5_osdjc"]
[ext_resource type="PackedScene" uid="uid://b3fxjo2esrjkp" path="res://src/level/entity/crew/crew_anna.tscn" id="6_ayux2"]
[ext_resource type="PackedScene" uid="uid://c5b4pkxd27ttm" path="res://src/level/entity/crew/crew_claire.tscn" id="7_6inv6"]
[ext_resource type="PackedScene" uid="uid://bfjf387yt1pr7" path="res://src/level/entity/crew/crew_babouchot.tscn" id="8_6un7v"]
[ext_resource type="PackedScene" uid="uid://blc4kch57c1m0" path="res://src/level/entity/crew/crew_pierre.tscn" id="9_xpne5"]

[node name="RoverMap" type="Node2D"]
script = ExtResource("1_4ca5h")
_map = 1
_tile_map_paths = Array[NodePath]([NodePath("BackgroundTileMap")])

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="BackgroundTileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_tup14")
cell_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(65536, 851968, 4, 131072, 851968, 4, 196608, 851968, 4, 262144, 851968, 4, 327680, 851968, 4, 393216, 851968, 4, 458752, 851968, 4, 524288, 851968, 4, 589824, 851968, 4, 655360, 851968, 4, 720896, 851968, 4, 786432, 851968, 4, 851968, 851968, 4, 917504, 851968, 4, 983040, 851968, 4, 1048576, 851968, 4, 1114112, 851968, 4, 1179648, 851968, 4, 1245184, 851968, 4, 1310720, 851968, 4, 1376256, 851968, 4, 1441792, 851968, 4, 1507328, 851968, 4, 65537, 851968, 4, 131073, 851968, 4, 196609, 851968, 4, 262145, 851968, 4, 327681, 851968, 4, 393217, 851968, 4, 458753, 851968, 4, 524289, 851968, 4, 589825, 851968, 4, 655361, 851968, 4, 720897, 851968, 4, 786433, 851968, 4, 851969, 851968, 4, 917505, 851968, 4, 983041, 851968, 4, 1048577, 851968, 4, 1114113, 851968, 4, 1179649, 851968, 4, 1245185, 851968, 4, 1310721, 851968, 4, 1376257, 851968, 4, 1441793, 851968, 4, 1507329, 851968, 4, 65538, 851968, 4, 131074, 851968, 4, 196610, 851968, 4, 262146, 851968, 4, 327682, 851968, 4, 393218, 851968, 4, 458754, 851968, 4, 524290, 851968, 4, 589826, 851968, 4, 655362, 851968, 4, 720898, 851968, 4, 786434, 851968, 4, 851970, 851968, 4, 917506, 851968, 4, 983042, 851968, 4, 1048578, 851968, 4, 1114114, 851968, 4, 1179650, 851968, 4, 1245186, 851968, 4, 1310722, 851968, 4, 1376258, 851968, 4, 1441794, 851968, 4, 1507330, 851968, 4, 65539, 851968, 4, 131075, 851968, 4, 196611, 851968, 4, 262147, 851968, 4, 327683, 851968, 4, 393219, 851968, 4, 458755, 851968, 4, 524291, 851968, 4, 589827, 851968, 4, 655363, 851968, 4, 720899, 851968, 4, 786435, 851968, 4, 851971, 851968, 4, 917507, 851968, 4, 983043, 851968, 4, 1048579, 851968, 4, 1114115, 851968, 4, 1179651, 851968, 4, 1245187, 851968, 4, 1310723, 851968, 4, 1376259, 851968, 4, 1441795, 851968, 4, 1507331, 851968, 4, 65540, 851968, 4, 131076, 851968, 4, 196612, 851968, 4, 262148, 851968, 4, 327684, 851968, 4, 393220, 851968, 4, 458756, 851968, 4, 524292, 851968, 4, 589828, 851968, 4, 655364, 851968, 4, 720900, 851968, 4, 786436, 851968, 4, 851972, 851968, 4, 917508, 851968, 4, 983044, 851968, 4, 1048580, 851968, 4, 1114116, 851968, 4, 1179652, 851968, 4, 1245188, 851968, 4, 1310724, 851968, 4, 1376260, 851968, 4, 1441796, 851968, 4, 1507332, 851968, 4, 65541, 851968, 4, 131077, 851968, 4, 196613, 851968, 4, 262149, 851968, 4, 327685, 851968, 4, 393221, 851968, 4, 458757, 851968, 4, 524293, 851968, 4, 589829, 851968, 4, 655365, 851968, 4, 720901, 851968, 4, 786437, 851968, 4, 851973, 851968, 4, 917509, 851968, 4, 983045, 851968, 4, 1048581, 851968, 4, 1114117, 851968, 4, 1179653, 851968, 4, 1245189, 851968, 4, 1310725, 851968, 4, 1376261, 851968, 4, 1441797, 851968, 4, 1507333, 851968, 4, 65542, 851968, 4, 131078, 851968, 4, 196614, 851968, 4, 262150, 851968, 4, 327686, 851968, 4, 393222, 851968, 4, 458758, 851968, 4, 524294, 851968, 4, 589830, 851968, 4, 655366, 851968, 4, 720902, 851968, 4, 786438, 851968, 4, 851974, 851968, 4, 917510, 851968, 4, 983046, 851968, 4, 1048582, 851968, 4, 1114118, 851968, 4, 1179654, 851968, 4, 1245190, 851968, 4, 1310726, 851968, 4, 1376262, 851968, 4, 1441798, 851968, 4, 1507334, 851968, 4, 65543, 851968, 4, 131079, 851968, 4, 196615, 851968, 4, 262151, 851968, 4, 327687, 851968, 4, 393223, 851968, 4, 458759, 851968, 4, 524295, 851968, 4, 589831, 851968, 4, 655367, 851968, 4, 720903, 851968, 4, 786439, 851968, 4, 851975, 851968, 4, 917511, 851968, 4, 983047, 851968, 4, 1048583, 851968, 4, 1114119, 851968, 4, 1179655, 851968, 4, 1245191, 851968, 4, 1310727, 851968, 4, 1376263, 851968, 4, 1441799, 851968, 4, 1507335, 851968, 4, 65544, 851968, 4, 131080, 851968, 4, 196616, 851968, 4, 262152, 851968, 4, 327688, 851968, 4, 393224, 851968, 4, 458760, 851968, 4, 524296, 851968, 4, 589832, 851968, 4, 655368, 851968, 4, 720904, 851968, 4, 786440, 851968, 4, 851976, 851968, 4, 917512, 851968, 4, 983048, 851968, 4, 1048584, 851968, 4, 1114120, 851968, 4, 1179656, 851968, 4, 1245192, 851968, 4, 1310728, 851968, 4, 1376264, 851968, 4, 1441800, 851968, 4, 1507336, 851968, 4, 65545, 851968, 4, 131081, 851968, 4, 196617, 851968, 4, 262153, 851968, 4, 327689, 851968, 4, 393225, 851968, 4, 458761, 851968, 4, 524297, 851968, 4, 589833, 851968, 4, 655369, 851968, 4, 720905, 851968, 4, 786441, 851968, 4, 851977, 851968, 4, 917513, 851968, 4, 983049, 851968, 4, 1048585, 851968, 4, 1114121, 851968, 4, 1179657, 851968, 4, 1245193, 851968, 4, 1310729, 851968, 4, 1376265, 851968, 4, 1441801, 851968, 4, 1507337, 851968, 4, 65546, 851968, 4, 131082, 851968, 4, 196618, 851968, 4, 262154, 851968, 4, 327690, 851968, 4, 393226, 851968, 4, 458762, 851968, 4, 524298, 851968, 4, 589834, 851968, 4, 655370, 851968, 4, 720906, 851968, 4, 786442, 851968, 4, 851978, 851968, 4, 917514, 851968, 4, 983050, 851968, 4, 1048586, 851968, 4, 1114122, 851968, 4, 1179658, 851968, 4, 1245194, 851968, 4, 1310730, 851968, 4, 1376266, 851968, 4, 1441802, 851968, 4, 1507338, 851968, 4, 65547, 851968, 4, 131083, 851968, 4, 196619, 851968, 4, 262155, 851968, 4, 327691, 851968, 4, 393227, 851968, 4, 458763, 851968, 4, 524299, 851968, 4, 589835, 851968, 4, 655371, 851968, 4, 720907, 851968, 4, 786443, 851968, 4, 851979, 851968, 4, 917515, 851968, 4, 983051, 851968, 4, 1048587, 851968, 4, 1114123, 851968, 4, 1179659, 851968, 4, 1245195, 851968, 4, 1310731, 851968, 4, 1376267, 851968, 4, 1441803, 851968, 4, 1507339, 851968, 4, 65548, 851968, 4, 131084, 851968, 4, 196620, 851968, 4, 262156, 851968, 4, 327692, 851968, 4, 393228, 786432, 2, 458764, 720896, 2, 655372, 917504, 1, 720908, 196608, 2, 786444, 917504, 3, 1048588, 720896, 2, 1114124, 851968, 4, 1179660, 851968, 4, 1245196, 851968, 4, 1310732, 851968, 4, 1376268, 851968, 4, 1441804, 851968, 4, 1507340, 851968, 4, 65549, 851968, 4, 131085, 851968, 4, 196621, 851968, 4, 393229, 851968, 1, 458765, 851968, 2, 524301, 917504, 1, 589837, 327680, 2, 655373, 393216, 3, 720909, 262144, 2, 786445, 393216, 3, 851981, 327680, 2, 917517, 917504, 3, 983053, 851968, 1, 1048589, 851968, 2, 1114125, 851968, 4, 1310733, 851968, 4, 1376269, 851968, 4, 1441805, 851968, 4, 1507341, 851968, 4, 65550, 851968, 4, 131086, 851968, 4, 196622, 851968, 4, 262158, 851968, 4, 327694, 851968, 4, 393230, 851968, 1, 458766, 851968, 2, 524302, 393216, 1, 589838, 393216, 1, 655374, 393216, 1, 720910, 262144, 1, 786446, 393216, 1, 851982, 393216, 1, 917518, 393216, 1, 983054, 851968, 1, 1048590, 851968, 2, 1114126, 851968, 4, 1179662, 851968, 4, 1245198, 851968, 4, 1310734, 851968, 4, 1376270, 851968, 4, 1441806, 851968, 4, 1507342, 851968, 4, 65551, 851968, 4, 131087, 851968, 4, 196623, 851968, 4, 262159, 851968, 4, 327695, 851968, 4, 393231, 851968, 1, 458767, 851968, 2, 524303, 393216, 3, 589839, 393216, 3, 655375, 327680, 1, 720911, 262144, 3, 786447, 327680, 3, 851983, 393216, 3, 917519, 393216, 3, 983055, 851968, 1, 1048591, 851968, 2, 1114127, 851968, 4, 1179663, 851968, 4, 1245199, 851968, 4, 1310735, 851968, 4, 1376271, 851968, 4, 1441807, 851968, 4, 1507343, 851968, 4, 65552, 851968, 4, 131088, 851968, 4, 196624, 851968, 4, 262160, 851968, 4, 327696, 851968, 4, 393232, 917504, 2, 458768, 851968, 3, 524304, 458752, 1, 589840, 131072, 3, 655376, 458752, 3, 720912, 458752, 2, 786448, 458752, 3, 851984, 65536, 3, 917520, 458752, 1, 983056, 917504, 2, 1048592, 851968, 3, 1114128, 851968, 4, 1179664, 851968, 4, 1245200, 851968, 4, 1310736, 851968, 4, 1376272, 851968, 4, 1441808, 851968, 4, 1507344, 851968, 4, 65553, 851968, 4, 131089, 851968, 4, 196625, 851968, 4, 262161, 851968, 4, 327697, 851968, 4, 393233, 851968, 4, 458769, 851968, 4, 524305, 393216, 3, 589841, 327680, 2, 655377, 458752, 3, 720913, 393216, 2, 786449, 458752, 3, 851985, 327680, 2, 917521, 393216, 3, 983057, 851968, 4, 1048593, 851968, 4, 1245201, 851968, 4, 1310737, 851968, 4, 1376273, 851968, 4, 1441809, 851968, 4, 1507345, 851968, 4, 65554, 851968, 4, 131090, 851968, 4, 196626, 851968, 4, 262162, 851968, 4, 458770, 851968, 4, 524306, 458752, 1, 589842, 327680, 1, 655378, 524288, 3, 720914, 327680, 2, 786450, 524288, 1, 851986, 327680, 3, 917522, 458752, 1, 983058, 851968, 4, 1048594, 851968, 4, 1114130, 851968, 4, 1179666, 851968, 4, 1245202, 851968, 4, 1310738, 851968, 4, 1376274, 851968, 4, 1441810, 851968, 4, 1507346, 851968, 4, 65555, 851968, 4, 131091, 851968, 4, 196627, 851968, 4, 262163, 851968, 4, 327699, 851968, 4, 393235, 851968, 4, 458771, 851968, 4, 524307, 393216, 3, 589843, 458752, 3, 655379, 983040, 2, 720915, 262144, 1, 786451, 196608, 3, 851987, 458752, 3, 917523, 393216, 3, 983059, 851968, 4, 1048595, 851968, 4, 1114131, 851968, 4, 1179667, 851968, 4, 1376275, 851968, 4, 1441811, 851968, 4, 1507347, 851968, 4, 65556, 851968, 4, 131092, 851968, 4, 196628, 851968, 4, 262164, 851968, 4, 327700, 851968, 4, 393236, 851968, 4, 589844, 524288, 1, 655380, 327680, 3, 720916, 327680, 2, 786452, 327680, 1, 851988, 524288, 3, 917524, 458752, 1, 983060, 851968, 4, 1048596, 851968, 4, 1245204, 851968, 4, 1310740, 851968, 4, 1376276, 851968, 4, 1441812, 851968, 4, 1507348, 851968, 4, 65557, 851968, 4, 131093, 851968, 4, 196629, 851968, 4, 262165, 851968, 4, 327701, 851968, 4, 393237, 786432, 2, 458773, 720896, 2, 524309, 393216, 3, 589845, 327680, 2, 655381, 458752, 3, 720917, 458752, 3, 786453, 458752, 3, 851989, 327680, 2, 917525, 393216, 3, 983061, 786432, 2, 1048597, 720896, 2, 1114133, 851968, 4, 1310741, 851968, 4, 1376277, 851968, 4, 1441813, 851968, 4, 1507349, 851968, 4, 65558, 851968, 4, 131094, 851968, 4, 196630, 851968, 4, 393238, 851968, 1, 458774, 851968, 2, 524310, 458752, 1, 589846, 131072, 3, 655382, 458752, 2, 720918, 458752, 3, 786454, 458752, 2, 851990, 65536, 3, 917526, 458752, 1, 983062, 851968, 1, 1048598, 851968, 2, 1114134, 851968, 4, 1310742, 851968, 4, 1376278, 851968, 4, 1441814, 851968, 4, 1507350, 851968, 4, 65559, 851968, 4, 131095, 851968, 4, 196631, 851968, 4, 262167, 851968, 4, 327703, 851968, 4, 393239, 851968, 1, 458775, 851968, 2, 524311, 393216, 1, 589847, 327680, 2, 655383, 393216, 2, 720919, 458752, 3, 786455, 393216, 2, 851991, 327680, 2, 917527, 393216, 1, 983063, 851968, 1, 1048599, 851968, 2, 1114135, 851968, 4, 1179671, 851968, 4, 1245207, 851968, 4, 1310743, 851968, 4, 1376279, 851968, 4, 1441815, 851968, 4, 1507351, 851968, 4, 65560, 851968, 4, 131096, 851968, 4, 196632, 851968, 4, 262168, 851968, 4, 327704, 851968, 4, 393240, 851968, 1, 458776, 851968, 2, 524312, 786432, 1, 589848, 393216, 3, 655384, 327680, 2, 720920, 524288, 2, 786456, 327680, 2, 851992, 393216, 3, 917528, 786432, 3, 983064, 851968, 1, 1048600, 851968, 2, 1245208, 851968, 4, 1310744, 851968, 4, 1376280, 851968, 4, 1441816, 851968, 4, 1507352, 851968, 4, 65561, 851968, 4, 131097, 851968, 4, 196633, 851968, 4, 262169, 851968, 4, 327705, 851968, 4, 393241, 917504, 2, 458777, 851968, 3, 524313, 720896, 1, 589849, 589824, 1, 655385, 589824, 2, 720921, 655360, 3, 786457, 589824, 2, 851993, 589824, 3, 917529, 720896, 3, 983065, 917504, 2, 1048601, 851968, 3, 1114137, 851968, 4, 1179673, 851968, 4, 1245209, 851968, 4, 1310745, 851968, 4, 1376281, 851968, 4, 1441817, 851968, 4, 1507353, 851968, 4, 65562, 851968, 4, 131098, 851968, 4, 196634, 851968, 4, 262170, 851968, 4, 327706, 851968, 4, 393242, 851968, 4, 458778, 851968, 4, 524314, 851968, 4, 589850, 720896, 1, 655386, 589824, 1, 720922, 589824, 2, 786458, 589824, 3, 851994, 720896, 3, 917530, 851968, 4, 983066, 851968, 4, 1048602, 851968, 4, 1114138, 851968, 4, 1179674, 851968, 4, 1376282, 851968, 4, 1441818, 851968, 4, 1507354, 851968, 4, 65563, 851968, 4, 131099, 851968, 4, 196635, 851968, 4, 262171, 851968, 4, 327707, 851968, 4, 393243, 851968, 4, 458779, 851968, 4, 524315, 851968, 4, 589851, 851968, 4, 655387, 720896, 1, 720923, 655360, 2, 786459, 720896, 3, 851995, 851968, 4, 917531, 851968, 4, 983067, 851968, 4, 1048603, 851968, 4, 1114139, 851968, 4, 1179675, 851968, 4, 1245211, 851968, 4, 1310747, 851968, 4, 1376283, 851968, 4, 1441819, 851968, 4, 1507355, 851968, 4, 65564, 851968, 4, 131100, 851968, 4, 196636, 851968, 4, 262172, 851968, 4, 327708, 851968, 4, 393244, 851968, 4, 458780, 851968, 4, 524316, 851968, 4, 589852, 851968, 4, 655388, 851968, 4, 720924, 851968, 4, 786460, 851968, 4, 851996, 851968, 4, 917532, 851968, 4, 983068, 851968, 4, 1048604, 851968, 4, 1114140, 851968, 4, 1179676, 851968, 4, 1245212, 851968, 4, 1310748, 851968, 4, 1376284, 851968, 4, 1441820, 851968, 4, 1507356, 851968, 4, 65565, 851968, 4, 131101, 851968, 4, 196637, 851968, 4, 262173, 851968, 4, 327709, 851968, 4, 393245, 851968, 4, 458781, 851968, 4, 524317, 851968, 4, 589853, 851968, 4, 655389, 851968, 4, 720925, 851968, 4, 786461, 851968, 4, 851997, 851968, 4, 917533, 851968, 4, 983069, 851968, 4, 1048605, 851968, 4, 1114141, 851968, 4, 1179677, 851968, 4, 1245213, 851968, 4, 1310749, 851968, 4, 1376285, 851968, 4, 1441821, 851968, 4, 1507357, 851968, 4, 65566, 851968, 4, 131102, 851968, 4, 196638, 851968, 4, 262174, 851968, 4, 327710, 851968, 4, 393246, 851968, 4, 458782, 851968, 4, 524318, 851968, 4, 589854, 851968, 4, 655390, 851968, 4, 720926, 851968, 4, 786462, 851968, 4, 851998, 851968, 4, 917534, 851968, 4, 983070, 851968, 4, 1048606, 851968, 4, 1114142, 851968, 4, 1179678, 851968, 4, 1245214, 851968, 4, 1310750, 851968, 4, 1376286, 851968, 4, 1441822, 851968, 4, 1507358, 851968, 4, 65567, 851968, 4, 131103, 851968, 4, 196639, 851968, 4, 262175, 851968, 4, 327711, 851968, 4, 393247, 851968, 4, 458783, 851968, 4, 524319, 851968, 4, 589855, 851968, 4, 655391, 851968, 4, 720927, 851968, 4, 786463, 851968, 4, 851999, 851968, 4, 917535, 851968, 4, 983071, 851968, 4, 1048607, 851968, 4, 1114143, 851968, 4, 1179679, 851968, 4, 1245215, 851968, 4, 1310751, 851968, 4, 1376287, 851968, 4, 1441823, 851968, 4, 1507359, 851968, 4, 65568, 851968, 4, 131104, 851968, 4, 196640, 851968, 4, 262176, 851968, 4, 327712, 851968, 4, 393248, 851968, 4, 458784, 851968, 4, 524320, 851968, 4, 589856, 851968, 4, 655392, 851968, 4, 720928, 851968, 4, 786464, 851968, 4, 852000, 851968, 4, 917536, 851968, 4, 983072, 851968, 4, 1048608, 851968, 4, 1114144, 851968, 4, 1179680, 851968, 4, 1245216, 851968, 4, 1310752, 851968, 4, 1376288, 851968, 4, 1441824, 851968, 4, 1507360, 851968, 4, 65569, 851968, 4, 131105, 851968, 4, 196641, 851968, 4, 262177, 851968, 4, 327713, 851968, 4, 393249, 851968, 4, 458785, 851968, 4, 524321, 851968, 4, 589857, 851968, 4, 655393, 851968, 4, 720929, 851968, 4, 786465, 851968, 4, 852001, 851968, 4, 917537, 851968, 4, 983073, 851968, 4, 1048609, 851968, 4, 1114145, 851968, 4, 1179681, 851968, 4, 1245217, 851968, 4, 1310753, 851968, 4, 1376289, 851968, 4, 1441825, 851968, 4, 1507361, 851968, 4, 65570, 851968, 4, 131106, 851968, 4, 196642, 851968, 4, 262178, 851968, 4, 327714, 851968, 4, 393250, 851968, 4, 458786, 851968, 4, 524322, 851968, 4, 589858, 851968, 4, 655394, 851968, 4, 720930, 851968, 4, 786466, 851968, 4, 852002, 851968, 4, 917538, 851968, 4, 983074, 851968, 4, 1048610, 851968, 4, 1114146, 851968, 4, 1179682, 851968, 4, 1245218, 851968, 4, 1310754, 851968, 4, 1376290, 851968, 4, 1441826, 851968, 4, 1507362, 851968, 4, 65571, 851968, 4, 131107, 851968, 4, 196643, 851968, 4, 262179, 851968, 4, 327715, 851968, 4, 393251, 851968, 4, 458787, 851968, 4, 524323, 851968, 4, 589859, 851968, 4, 655395, 851968, 4, 720931, 851968, 4, 786467, 851968, 4, 852003, 851968, 4, 917539, 851968, 4, 983075, 851968, 4, 1048611, 851968, 4, 1114147, 851968, 4, 1179683, 851968, 4, 1245219, 851968, 4, 1310755, 851968, 4, 1376291, 851968, 4, 1441827, 851968, 4, 1507363, 851968, 4, 65572, 851968, 4, 131108, 851968, 4, 196644, 851968, 4, 262180, 851968, 4, 327716, 851968, 4, 393252, 851968, 4, 458788, 851968, 4, 524324, 851968, 4, 589860, 851968, 4, 655396, 851968, 4, 720932, 851968, 4, 786468, 851968, 4, 852004, 851968, 4, 917540, 851968, 4, 983076, 851968, 4, 1048612, 851968, 4, 1114148, 851968, 4, 1179684, 851968, 4, 1245220, 851968, 4, 1310756, 851968, 4, 1376292, 851968, 4, 1441828, 851968, 4, 1507364, 851968, 4, 65573, 851968, 4, 131109, 851968, 4, 196645, 851968, 4, 262181, 851968, 4, 327717, 851968, 4, 393253, 851968, 4, 458789, 851968, 4, 524325, 851968, 4, 589861, 851968, 4, 655397, 851968, 4, 720933, 851968, 4, 786469, 851968, 4, 852005, 851968, 4, 917541, 851968, 4, 983077, 851968, 4, 1048613, 851968, 4, 1114149, 851968, 4, 1179685, 851968, 4, 1245221, 851968, 4, 1310757, 851968, 4, 1376293, 851968, 4, 1441829, 851968, 4, 1507365, 851968, 4, 65574, 851968, 4, 131110, 851968, 4, 196646, 851968, 4, 262182, 851968, 4, 327718, 851968, 4, 393254, 851968, 4, 458790, 851968, 4, 524326, 851968, 4, 589862, 851968, 4, 655398, 851968, 4, 720934, 851968, 4, 786470, 851968, 4, 852006, 851968, 4, 917542, 851968, 4, 983078, 851968, 4, 1048614, 851968, 4, 1114150, 851968, 4, 1179686, 851968, 4, 1245222, 851968, 4, 1310758, 851968, 4, 1376294, 851968, 4, 1441830, 851968, 4, 1507366, 851968, 4, 65575, 851968, 4, 131111, 851968, 4, 196647, 851968, 4, 262183, 851968, 4, 327719, 851968, 4, 393255, 851968, 4, 458791, 851968, 4, 524327, 851968, 4, 589863, 851968, 4, 655399, 851968, 4, 720935, 851968, 4, 786471, 851968, 4, 852007, 851968, 4, 917543, 851968, 4, 983079, 851968, 4, 1048615, 851968, 4, 1114151, 851968, 4, 1179687, 851968, 4, 1245223, 851968, 4, 1310759, 851968, 4, 1376295, 851968, 4, 1441831, 851968, 4, 1507367, 851968, 4, 0, 851968, 4, 1, 851968, 4, 2, 851968, 4, 3, 851968, 4, 4, 851968, 4, 5, 851968, 4, 6, 851968, 4, 7, 851968, 4, 8, 851968, 4, 9, 851968, 4, 10, 851968, 4, 11, 851968, 4, 12, 851968, 4, 589836, 851968, 4, 983052, 786432, 2, 13, 851968, 4, 327693, 851968, 4, 1245197, 851968, 4, 14, 851968, 4, 15, 851968, 4, 16, 851968, 4, 17, 851968, 4, 1179665, 851968, 4, 18, 851968, 4, 393234, 851968, 4, 19, 851968, 4, 1310739, 851968, 4, 20, 851968, 4, 524308, 458752, 1, 1179668, 851968, 4, 21, 851968, 4, 1245205, 851968, 4, 22, 851968, 4, 327702, 851968, 4, 1245206, 851968, 4, 23, 851968, 4, 24, 851968, 4, 1179672, 851968, 4, 25, 851968, 4, 26, 851968, 4, 1310746, 851968, 4, 27, 851968, 4, 28, 851968, 4, 29, 851968, 4, 30, 851968, 4, 31, 851968, 4, 32, 851968, 4, 33, 851968, 4, 34, 851968, 4, 35, 851968, 4, 36, 851968, 4, 37, 851968, 4, 38, 851968, 4, 39, 851968, 4)

[node name="PlayerStart" type="Node2D" parent="."]
position = Vector2(184, 88)

[node name="PowerModule" parent="." instance=ExtResource("3_6y7py")]
unique_name_in_owner = true
position = Vector2(152, 88)

[node name="EngineModule" parent="." instance=ExtResource("4_8s7ka")]
unique_name_in_owner = true
position = Vector2(112, 88)

[node name="RoverExit" parent="." instance=ExtResource("5_osdjc")]
position = Vector2(200, 88)

[node name="CrewAnna" parent="." instance=ExtResource("6_ayux2")]
position = Vector2(176, 72)

[node name="CrewClaire" parent="." instance=ExtResource("7_6inv6")]
position = Vector2(128, 104)

[node name="CrewBabouchot" parent="." instance=ExtResource("8_6un7v")]
position = Vector2(128, 72)

[node name="CrewPierre" parent="." instance=ExtResource("9_xpne5")]
position = Vector2(176, 104)
